--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>alkan</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.10.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
 </project>
